fix HeaderInput; el-table__fixed-right z-index 0 so as not to overlap overlay;

--- a/src/assets/scss/common/elementOverride.scss
+++ b/src/assets/scss/common/elementOverride.scss
@@ -15,3 +15,7 @@
 .el-popover {
   padding: 0!important;
 }
+
+.el-table__fixed-right {
+  z-index: 0;
+}
